--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,61 @@
 /*  your css code here. If applicable */
+/* styles.css */
+body {
+    background-color: #f5f5f5;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.header {
+    background-color: #011e29;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.latest-news-section {
+    background-color: #ffffff;
+    padding: 20px;
+    width: 80%;
+    margin: 20px auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.latest-news-section h2 {
+    text-align: center;
+}
+
+.latest-news-section ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.latest-news-section li {
+    margin-bottom: 20px;
+}
+
+.latest-news-section h3 {
+    margin: 0 0 10px;
+}
+
+.pictorial-news-section {
+    background-color: #ffffff;
+    padding: 20px;
+    width: 80%;
+    margin: 20px auto;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.pictorial-news-section h2 {
+    margin-bottom: 20px;
+}
+
+.pictorial-news-section img {
+    width: 30%;
+    margin: 0 10px;
+    border-radius: 10px;
+}
+
